crates/uitest/fixtures/ty/recursive_type.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: crates/uitest/fixtures/ty/recursive_type.fe
---
error[3-0003]: recursive type is not allowed
  ┌─ recursive_type.fe:1:12
  │
1 │ pub struct S1 {
  │            ^^ recursive type definition
2 │     s: S1
  │        -- recursion occurs here

error[3-0003]: recursive type is not allowed
  ┌─ recursive_type.fe:5:12
  │
5 │ pub struct S2 {
  │            ^^ recursive type definition
6 │     s: S3
  │        -- recursion occurs here

error[3-0003]: recursive type is not allowed
   ┌─ recursive_type.fe:9:12
   │
 9 │ pub struct S3 {
   │            ^^ recursive type definition
10 │     s: S4
   │        -- recursion occurs here

error[3-0003]: recursive type is not allowed
   ┌─ recursive_type.fe:13:12
   │
13 │ pub struct S4 {
   │            ^^ recursive type definition
14 │     s: S2
   │        -- recursion occurs here

error[3-0003]: recursive type is not allowed
   ┌─ recursive_type.fe:22:12
   │
22 │ pub struct S6 {
   │            ^^ recursive type definition
23 │     s: S5<S6>
   │        ------ recursion occurs here


